--- a/index.html
+++ b/index.html
@@ -179,47 +179,42 @@
     ];
 
     const container = document.getElementById("pages");
-
     texts.forEach((text, i) => {
       const page = document.createElement("div");
       page.className = "page";
       if (i === 0) page.classList.add("active");
-
-      page.innerHTML = `
-        <h2>${text.title}</h2>
-        <div class="text-block">${text.content}</div>
-        <div class="slider-container">
-          <label for="range${i}">Насколько этот текст кажется написанным человеком?</label>
-          <input type="range" id="range${i}" name="q${i + 1}" min="1" max="5" value="3">
-          <div class="slider-labels">
-            <span>точно ИИ</span>
-            <span>не могу определить</span>
-            <span>точно человек</span>
-          </div>
+       page.innerHTML = `
+      <h2>${text.title}</h2>
+      <div class="text-block">${text.content}</div>
+      <div class="slider-container">
+        <label for="range${i}">Насколько этот текст кажется написанным человеком?</label>
+        <input type="range" id="range${i}" name="q${i + 1}" min="1" max="5" value="3">
+        <div class="slider-labels">
+          <span>точно ИИ</span>
+          <span>не могу определить</span>
+          <span>точно человек</span>
         </div>
-        <div class="button-row">
-          <button onclick="prevPage(${i})" ${i === 0 ? "disabled style='opacity:0.5;cursor:default;'" : ""}>Назад</button>
-          <button onclick="nextPage(${i})">${i === texts.length - 1 ? "Завершить" : "Далее"}</button>
-        </div>
-      `;
-      container.appendChild(page);
-    });
+      </div>
+      <div class="button-row">
+        <button onclick="prevPage(${i})" ${i === 0 ? "disabled style='opacity:0.5;cursor:default;'" : ""}>Назад</button>
+        <button onclick="nextPage(${i})">${i === texts.length - 1 ? "Завершить" : "Далее"}</button>
+      </div>
+    `;
+    container.appendChild(page);
+  });
 
     function nextPage(current) {
-      document.querySelectorAll('.page')[current].classList.remove('active');
-      if (current + 1 < texts.length) {
-        document.querySelectorAll('.page')[current + 1].classList.add('active');
-      } else {
-const results = {};
-texts.forEach((_, i) => {
-  results[`q${i + 1}`] = document.getElementById(`range${i}`).value;
-});
-       
-const params = Object
-  .keys(results)
-  .map(key => `${encodeURIComponent(key)}=${encodeURIComponent(results[key])}`);
-    params.push('callback=surveyCallback');
-        
+      const pages = document.querySelectorAll('.page');
+    pages[current].classList.remove('active');
+         if (current + 1 < pages.length) {
+      pages[current + 1].classList.add('active');
+      return;
+    }
+        const params = Object
+      .keys(results)
+      .map(key => `${encodeURIComponent(key)}=${encodeURIComponent(results[key])}`);
+    params.push('callback=surveyCallback'); 
+
 const script = document.createElement('script');
 script.src = 'https://script.google.com/macros/s/AKfycbxX1Kod1-g1xlMko2AlVmQPSl8230UIYarVgJ_Vo5rh6sbH1vH0MdK_BiLql8IioDi9/exec' +  '?' + params.join('&');
 document.body.appendChild(script);
@@ -227,20 +222,20 @@ document.body.appendChild(script);
 }
 
 function prevPage(current) {
-      if (current > 0) {
-        document.querySelectorAll('.page')[current].classList.remove('active');
-        document.querySelectorAll('.page')[current - 1].classList.add('active');
- }
-
-}
+       const pages = document.querySelectorAll('.page');
+    if (current > 0) {
+      pages[current].classList.remove('active');
+      pages[current - 1].classList.add('active');
+    }
+  }
   function surveyCallback(response) {
     if (response.status === 'OK') {
-      alert('Спасибо за участие!');
+      alert('Спасибо за участие! Ваш ответ записан.');
       window.location.reload();
     } else {
       alert('Ошибка при отправке, попробуйте позже.');
     }
   }
-  </script>
+</script>
 </body>
 </html>
