--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
         <label for="range${i}">Насколько этот текст кажется написанным человеком?</label>
         <input type="range" id="range${i}" name="q${i+1}" min="1" max="5" value="3">
         <div class="slider-labels">
-          <span>точно ИИ</span>
-          <span>не могу определить</span>
+          <span>точно ИИ;</span>
+          <span>не могу определить;</span>
           <span>точно человек</span>
         </div>
       </div>
